package com.pseandroid2.dailydataserver.posts;

import org.springframework.web.bind.annotation.*;

import java.util.ArrayList;
import java.util.List;

/**
 * Interface for all interaction for Posts
 */
@RestController
@RequestMapping("/Posts")
public class PostsController {

    /**
     * Provides all PostsPreviews with their PostIds.
     *
     * @param token the token, to verify the user, provided by the client
     * @return a list with all PostPreview and the Post ids.
     */
    @GetMapping("/allPreview")
   public List<String> getAllPostPreview(@RequestHeader String token){

       return new ArrayList<String>();
   }

    /**
     * Provides all Templates from fromPost. Returns the identifier and the DetailView from a template
     *
     * @param token the token, to verify the user, provided by the client
     * @param fromPost declares from which post the postDetail is recommended, provided by the client
     * @return a list of all template detailViews with TemplateNumber together, each as String.
     */
   @GetMapping("/detail/{post}")
   public List<String> getPostDetail(@RequestHeader String token, @PathVariable("post") int fromPost){

       return new ArrayList<String>();
   }

    /**
     * Provides the projectTemplate from the post fromPost
     *
     * @param token the token, to verify the user, provided by the client
     * @param fromPost declares from which post the projectTemplate is recommended, provided by the client.
     * @return the projectTemplate as JSON
     */
   @GetMapping("/{post}/projectTemplate")
   public String getProjectTemplate(@RequestHeader String token,@PathVariable("post") int fromPost){
       return "TODO";
   }

    /**
     * Provides a specified GraphTemplate.
     *
     * @param token the token, to verify the user, provided by the client
     * @param fromPost declares from which project the graph template is recommended, provided by the client
     * @param templateNumber declares which template is recommended, provided by the client.
     * @return the GrapgTemplate as JSON
     */
   @GetMapping("/{post}/{template}")
   public String getGraphTemplate(@RequestHeader String token,@PathVariable("post") int fromPost, @PathVariable("template") int templateNumber){
       return "TODO";
   }

    /**
     * adds a new Post.
     *
     * @param token the token, to verify the user, provided by the client
     * @param postPreview the postPreview for the post, provided by the client
     * @param projectTemplate the projectTemplate, provided by the client
     * @param graphTemplates all graphTemplates, provided by the client
     * @return the postID of the new post.
     */
   @PostMapping("/add")
    public int addPost(@RequestHeader String token, @RequestParam String postPreview, @RequestParam String projectTemplate, @RequestParam List<String> graphTemplates){
       return 0;
   }

    /**
     * Removes a post if the user is allowed to remove it.
     * @param token the token, to verify the user, provided by the client
     * @param user the user, who wants to remove a post. Generated by the client.
     * @param postID which Post should be removed.
     * @return  if the post could be removed.
     */
   @DeleteMapping("/remove/{post}")
    public boolean removePost(@RequestHeader String token,@RequestAttribute String user, @PathVariable("post") int postID){
       return true;
   }





}
