@startuml
'https://plantuml.com/class-diagram
skinparam monochrome true
skinparam shadowing false
skinparam genericDisplay old
skinparam classAttributeIconSize 0
hide circle

package PostDatabase{
    PostsController -- PostsRepository : postRepo <
    PostsController -- GraphtemplatesRepository : templateRepo <

    class Posts <<Entity>>{
        {primaryKey} PostID: int
        PostPreview: JSON
        CreatedBy: String
    }

    interface PostsRepository <PostDatabase,int> extends JpaRepository{}

    class PostsController {
        - postRepo: PostsRepository
        - templateRepo: TemplatesRepository

        + getAllPostPreview():Collection(String)
        + getPostDetail(fromPost: int):Collection(String)
        + getProjectTemplate(fromPost: int): JSON
        + getGraphTemplate(fromPost: int,templateNumber: int): JSON
        + addPost(postPreview: JSON, user: String, projectTemplate: JSON, graphTemplate: List(JSON))
        + removePost(postID, user: String)
    }

    note right of PostsController::getAllPostPreview{
        postRepo.getAll().getPostPreview()
        postRepo.getAll().getPostID()
        //Each to string
    }

    note right of PostsController::getPostDetail{
        templateRepo.get(fromPost).getTemplateNumber()
        templateRepo.get(fromPost).getDetailView()
    }

    note right of PostsController::addPost{
            postRepo.add()
            templateRepo.add()
        }


    class Template <<Entity>>{
        {primaryKey} PostID: int
        {primaryKey} TemplateNumber: int
        Template: JSON
        isProjectTemplate: boolean
        detailView: JSON
    }
    interface TemplatesRepository <Template, Tupel(int,int)> extends JpaRepository {
        getToProject(projectNumber: int): Collection(Templates)
    }

  }


@enduml